# event_processing

./: .gitignore  CMakeLists.txt  package.xml
include/: EventArray.h  H5Reader.h  Representation.h
scripts/: db3_to_h5.py  rosbag_to_h5.py
scripts/data_format/: aedat_to_h5.py  db3_to_h5.py  event_packagers.py
scripts/test/: representation.py  tencode.py  test.py  visualize_3d.py
scripts/utils/: preprocessing.py
src/: EventArray.cpp  H5Reader.cpp  Representation.cpp  main.cpp  visualizer_node.cpp
