<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>event_processing</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="xogns2079@gmail.com">root</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>dvs_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>opencv</exec_depend>
  <exec_depend>eigen3</exec_depend>
  <exec_depend>ceres-solver</exec_depend>
  <exec_depend>hdf5</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
